Test/typing/should_fail/enclosed_class_1.java
package tutu.titi.toto;

class A {

    A(int i){}

    private void myMethod(){}

	class B {

        class A {}

        B(float j){}

        private void myMethod(){}
    }
}